[workspace]
resolver = "3"
package.edition = "2024"

members = ["shared", "fk", "game_loader", "fk_core", "game"]

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace.dependencies]

[workspace.dependencies.bevy]
version = "0.15.3"
features = ["dynamic_linking", "wav"]
