[package]
name = "game"
version = "0.1.0"
edition = "2024"

[features]
unloading = ["relib_module/unloading"]

[dependencies]
bevy_math = { version = "0.15.3", default-features = false }
bevy_transform = { version = "0.15.3", default-features = false }
bevy_input = { version = "0.15.3", default-features = false }
rand = "0.9.0"
relib_interface = { version = "0.4.2", features = ["include"] }
relib_module = "0.4.2"
shared.path = "../shared"
fk_core.path = "../fk_core"

[build-dependencies]
relib_interface = { version = "0.4.2", features = ["build"] }
shared.path = "../shared"
