[package]
name = "game_loader"
version = "0.1.0"
edition = "2024"


[features]
unloading = ["relib_host/unloading"]

[dependencies]
fk.path = "../fk"
fk_core.path = "../fk_core"
bevy-inspector-egui = "0.29.1"
bevy.workspace = true
relib_host = "0.4.2"
libloading = "0.8.6"
relib_interface = { version = "0.4.2", features = ["include"] }
shared.path = "../shared"

[build-dependencies]
relib_interface = { version = "0.4.2", features = ["build"] }
shared.path = "../shared"
